--- a/home/homepage.scss
+++ b/home/homepage.scss
@@ -18,7 +18,7 @@ body {
   background: linear-gradient(to bottom, $white,$lighter-blue, $lighter-pink);
 }
 
-main > h1 {
+.main-title {
   text-align: center;
   background-color: $light-blue;
   margin: 0;
